--- a/emissions_analysis.html
+++ b/emissions_analysis.html
@@ -9,7 +9,7 @@
     <style>
         .emissions-section {
             display: flex;
-            flex-wrap: nowrap;
+            flex-wrap: wrap;
             justify-content: space-between;
             align-items: flex-start;
             padding: 50px;
@@ -29,7 +29,7 @@
         }
         .form-group {
             margin: 20px 0;
-            width: 80%;
+            width: 100%;
         }
         .form-group label {
             font-size: 1.2em;
@@ -37,7 +37,7 @@
             margin-bottom: 10px;
         }
         .form-group input {
-            width: 100%;
+            width: 85%;
             padding: 10px;
             font-size: 1em;
             border-radius: 10px;
@@ -67,6 +67,25 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: left;
         }
+        .chart-container {
+            width: 45%;
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+        }
+        #emissions-chart {
+            width: 100%;
+            height: 400px;
+            border: 2px solid #00796b;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+    .info {
+            font-size: 0.8em;
+            color: #555;
+        }
     </style>
 </head>
 <body>
@@ -86,7 +105,8 @@
                     <input type="number" id="annual-energy-emissions" value="6132000" required>
                 </div>
                 <div class="form-group">
-                    <label for="emissions-factor">Emissions Factor (kg CO<sub>2</sub> per kWh):</label>
+                    <label for="emissions-factor">Emissions Factor (kg CO<sub>2</sub> per kWh): </label>
+                    <label for="emissions-factor"><span class="info">(This indicates the amount of CO<sub>2</sub> emitted for each kWh of energy produced by traditional fossil fuel sources.)</span></label>
                     <input type="number" id="emissions-factor" step="0.01" value="0.5" required>
                 </div>
                 <button type="button" id="emissions-calculate-button">Calculate Emissions</button>
@@ -97,12 +117,17 @@
                 <p id="equivalent-cars-removed-result">Equivalent Cars Removed from Road: </p>
             </div>
         </div>
+        <div class="chart-container">
+            <h2>Annual Emissions Reduction</h2>
+            <canvas id="emissions-chart"></canvas>
+        </div>
     </section>
 
     <footer class="footer">
         <p>&copy; Alexander Piccinelli | Sima Vivaldi. </p>
         <p>All rights reserved.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         document.getElementById('emissions-calculate-button').addEventListener('click', function() {
             const annualEnergy = parseFloat(document.getElementById('annual-energy-emissions').value);
@@ -116,6 +141,35 @@
             // Calculate Equivalent Cars Removed
             const equivalentCarsRemoved = annualEmissionsReduction / emissionsPerCar;
             document.getElementById('equivalent-cars-removed-result').textContent = `Equivalent Cars Removed from Road: ${equivalentCarsRemoved.toFixed(0)} cars`;
+
+            // Create or Update Emissions Reduction Chart
+            const ctxEmissions = document.getElementById('emissions-chart').getContext('2d');
+            if (window.emissionsChart) {
+                window.emissionsChart.destroy();
+            }
+            window.emissionsChart = new Chart(ctxEmissions, {
+                type: 'bar',
+                data: {
+                    labels: ['Emissions Reduction'],
+                    datasets: [{
+                        label: 'Annual Emissions Reduction (Metric Tons of CO₂)',
+                        data: [annualEmissionsReduction],
+                        backgroundColor: '#00796b'
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        y: {
+                            beginAtZero: true,
+                            title: {
+                                display: true,
+                                text: 'Metric Tons of CO₂'
+                            }
+                        }
+                    }
+                }
+            });
         });
     </script>
 </body>
