--- a/wind_analysis_page.html
+++ b/wind_analysis_page.html
@@ -6,84 +6,17 @@
     <title>Wind Analysis Calculator - Wind Energy Explorer</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <style>
-        .calculator-section {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            padding: 50px;
-            background-color: #f0f8ff;
-            border-radius: 15px;
-            width: 90%;
-            margin: 40px auto;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            gap: 20px;
-        }
-        .calculator-container {
-            width: 48%;
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .form-group {
-            margin: 20px 0;
-            width: 100%;
-        }
-        .form-group label {
-            font-size: 1.2em;
-            display: block;
-            margin-bottom: 10px;
-        }
-        .form-group input,
-        .form-group select {
-            width: 100%;
-            padding: 10px;
-            font-size: 1em;
-            border-radius: 10px;
-            border: 2px solid #32CD32;
-            box-shadow: inset 0px 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        button#calculate-button {
-            font-size: 1.2em;
-            color: #fff;
-            background-color: #32CD32;
-            padding: 15px 25px;
-            border: none;
-            border-radius: 15px;
-            cursor: pointer;
-            transition: transform 0.3s, background-color 0.3s;
-            margin-top: 20px;
-        }
-        button#calculate-button:hover {
-            transform: scale(1.1);
-            background-color: #28a428;
-        }
-        .results-container {
-            background: #ffffff;
-            padding: 20px;
-            margin-top: 30px;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: left;
-        }
-        .graph-container {
-            width: 48%;
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        #wind-histogram {
-            width: 100%;
-            height: 400px;
-            border: 2px solid #32CD32;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-    </style>
 </head>
 <body>
+    <nav class="sticky-navbar">
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="wind_analysis_page.html">Wind Analysis</a></li>
+            <li><a href="financial_analysis_page.html">Financial Calculator</a></li>
+            <li><a href="emissions_analysis.html">CO₂ Reduction</a></li>
+        </ul>
+    </nav>
+
     <header class="hero">
         <div class="hero-content">
             <h1 class="hero-title">Wind Analysis Calculator</h1>
@@ -114,31 +47,41 @@
                     <label for="turbine-count">Number of Turbines:</label>
                     <input type="number" id="turbine-count" value="5" required>
                 </div>
+                <div class="form-group">
+                    <label for="temperature">Average Temperature (°C):</label>
+                    <input type="number" id="temperature" value="15" required>
+                </div>
                 <button type="button" id="calculate-button">Calculate</button>
             </form>
         </div>
-        <div class="graph-container">
-            <canvas id="wind-histogram"></canvas>
+
+        <div class="results-container">
+            <h3>Results:</h3>
+            <p id="air-density-result">Corrected Air Density: </p>
+            <p id="specific-power-result">Specific Power in the Wind: </p>
+            <p id="power-output-result">Power Output: </p>
+            <p id="aep-vestas-result" style="display:none;">AEP (Vestas V110): </p>
+            <p id="aep-ge-result" style="display:none;">AEP (GE 116): </p>
+            <p id="noise-level-result">Combined Noise Level: </p>
+            <p id="efficiency-result">Efficiency: </p>
+            <p id="noise-compliance-result">Noise Level Compliance: </p>
+
         </div>
     </section>
 
-    <div class="results-container">
-        <h3>Results:</h3>
-        <p id="air-density-result">Corrected Air Density: </p>
-        <p id="specific-power-result">Specific Power in the Wind: </p>
-        <p id="power-output-result">Power Output: </p>
-        <p id="aep-vestas-result" style="display:none;">AEP (Vestas V110): </p>
-        <p id="aep-ge-result" style="display:none;">AEP (GE 116): </p>
-        <p id="noise-level-result">Combined Noise Level: </p>
-    </div>
-
-        <p></p>
+    <section class="graphs-section">
+        <div class="graph-container">
+            <h3>Wind Speed Histogram</h3>
+            <canvas id="wind-histogram"></canvas>
+        </div>
+    </section>
 
     <footer class="footer">
         <p>&copy; Alexander Piccinelli | Sima Vivaldi. </p>
         <p>All rights reserved.</p>
     </footer>
-    <script src="wind_analysis_calculator.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="wind_analysis_calculator.js"></script>
 </body>
 </html>
